--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta http-equiv="Cache-Control" content="max-age=1209600" />
     <link
       rel="preload"
-      href="./assets/circular.woff2"
+      href="./assets/fonts/circular.woff2"
       as="font"
       type="font/woff2"
       crossorigin
